# ledgedash

./: .gitignore  Cargo.toml  Dioxus.toml  package-lock.json
assets/: tailwind.css
src/: main.rs
src/components/: character.rs  player_pick.rs  replay_drop.rs  sidebar.rs
