[package]
name = "ledgedash"
version = "0.1.0"
authors = ["Nick Condron <ncondron42@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5.1", features = ["desktop", "router"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
peppi = "2.0.1"
ssbm-data = "0.1.0"
