[package]
name = "ledgedash"
version = "0.1.0"
authors = ["Nick Condron <ncondron42@gmail.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.5.1", features = ["desktop", "router"] }
dioxus-logger = "0.5.0"
dioxus-free-icons = { version = "0.8.5", features = ["bootstrap"] }
tracing = "0.1.40"
peppi = "2.0.1"
ssbm-data = "0.1.0"
manganis = "0.2.2"
